--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,6 +12,12 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/antd/4.13.1/antd.min.css"
+            integrity="sha512-LAYUgePXfqrkbi22FnxlYcpNW6LzE+ComnDR1diyRTe73Sw6zsyV+g7xiOyRdkASNXNQTSXYDclOkxhjNZziIg=="
+            crossorigin="anonymous"
+        />
         <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
